@@ -1,3 +1,7 @@
+2022-06-24  Matteo Corti  <matteo@corti.li>
+
+        * update.sh: Moved MacUpdater at the beginning
+
 2022-06-20  Matteo Corti  <matteo@corti.li>
 
         * update.sh: Skipping MS and Adobe if MacUpdater is present
